<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:background="?android:attr/selectableItemBackground">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="72dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/bluetooth"
        android:padding="16dp"
        app:srcCompat="@drawable/bluetooth" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:showDividers="end">

        <TextView
            android:id="@+id/primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/name"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/mac_address" />

        <TextView
            android:id="@+id/tertiary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/state" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>
    </LinearLayout>
</LinearLayout>
